2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (grub_sprintf): Removed. All users switched to
	grub_xasprintf or grub_snprintf.
	(grub_vsprintf): Likewise.
	(grub_snprintf): New proto.
	(grub_vsnprintf): Likewise.
	(grub_xasprintf): Likewise.
	(grub_xvasprintf): Likewise.
	* kern/misc.c (grub_vprintf): Use grub_vsnprintf_real.
	(grub_sprintf): Removed.
	(grub_vsnprintf): New function.
	(grub_snprintf): Likewise.
	(grub_xvasprintf): Likewise.
	(grub_xasprintf): Likewise.
	(grub_vsprintf): Renamed to ...
	(grub_vsnprintf_real): ...this. New argument max_len.

2010-01-20  BVK Chaitanya  <bvk.groups@gmail.com>

	* include/grub/script_sh.h (sourcecode): Remove const qualifier to
	fix grub-script-check warning.

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/font.h (grub_font_load): Fix prototype.

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/mips.rmk (kernel_img_HEADERS) [yeeloong]: Add pci.h.

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/x86_64/at_keyboard.h: New file.

2010-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/mips/linux.c: Include missing grub/i18n.h.

2009-12-20  Robert Millan  <rmh.grub@aybabtu.com>

	* normal/menu.c (notify_execution_failure): Clarify error message.

2009-12-20  Robert Millan  <rmh.grub@aybabtu.com>

	* commands/loadenv.c (check_blocklists): Use `grub_err_t' as
	return value (and revert all return statements).  Update users.

2010-01-20  Dan Merillat  <debian@dan.merillat.org>

	* kern/device.c (grub_device_iterate): Allocate new part_ent
	structure based on sizeof (*p) rather than sizeof (p->next), to
	account for structure padding.

	* util/grub-probe.c (probe_raid_level): Return -1 immediately if
	disk is NULL, which might happen for LVM physical volumes with no
	LVM signature.

2009-12-20  Robert Millan  <rmh.grub@aybabtu.com>

	* loader/mips/linux.c (grub_cmd_initrd)
	(GRUB_MOD_INIT(linux)): Adjust and gettextize a few strings.